--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 PROPOSAL PROYEK 3
               </h1>
               <h1 class="title has-text-centered section-title">
-                UNIVERSITAS LOGISTIK DAN BISNIS INTERNASIONAL
+                Pengembangan Warehouse Management System
               </h1>
             </div>
             <div class="column is-10 has-text-centered is-offset-1">
@@ -308,6 +308,25 @@
         </div>
       </div>
       <!-- End Work Content -->
+        <!-- Begin Services Content -->
+      <div class="section-color services" id="services">
+        <div class="container">
+          <div class="columns is-multiline">
+            <div class="column is-12 about-me">
+              <h1 class="title has-text-centered section-title">
+                DOWNLOAD PROPOSAL
+              </h1>
+            </div>
+            <div class="column is-10 has-text-centered is-offset-1">
+              <a href="https://github.com/warehousemanagement88/warehouse/files/12839995/Proposal.Pengembangan.Sistem.Manajemen.Gudang_Agita.Nurfadillah.1214029.Al.Novianti.Ramadhani.1214032.pdf" download class="button">
+                Download PDF&emsp;<i class="fad fa-download fa-lg"></i>
+              </a>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Services Content -->
     
     </div>
     <!-- End Main Content -->
