--- a/download.html
+++ b/download.html
@@ -86,7 +86,7 @@
                 class="column is-12 hero-menu-desktop has-text-centered is-fixed-top"
               >
                 <ul>
-                  <li class="is-active">
+                  <li>
                     <a href="index.html">Home</a>
                   </li>
                   <li>
@@ -96,6 +96,7 @@
                     <a href="proposal.html">Proposal</a>
                   </li>
                   <li>
+                  <li class="is-active">
                     <a href="download.html">Download</a>
                   </li>
                 </ul>
@@ -115,123 +116,30 @@
       <div class="section-light about-me" id="about-me">
         <div class="container">
           <div class="column is-12 about-me">
-            <h1 class="title has-text-centered section-title">About Us</h1>
           </div>
-          <div class="columns is-multiline">
-            <div
-              class="column is-6 has-vertically-aligned-content"
-              data-aos="fade-right"
-            >
-              <div id="agita"></div>
-              <!-- agita end -->
-              <div id="novi"></div>
-            </div>
-            <div
-              id="image"
-              class="column is-6 right-image"
-              data-aos="fade-left"
-            ></div>
+          <div class="column is-12 about-me">
+            <h1 class="title has-text-centered section-title">
+              DOWNLOAD PROPOSAL
+            </h1>
+          </div>
+          <div class="column is-10 has-text-centered is-offset-1">
+            <a href="https://github.com/warehousemanagement88/warehouse/files/12839995/Proposal.Pengembangan.Sistem.Manajemen.Gudang_Agita.Nurfadillah.1214029.Al.Novianti.Ramadhani.1214032.pdf" download class="button">
+              Download PDF&emsp;<i class="fad fa-download fa-lg"></i>
+            </a>
           </div>
         </div>
       </div>
       <!-- End About Me Content -->
-      <div class="section-dark resume">
-        <div class="container">
-          <div
-            class="columns is-multiline"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                PROPOSAL PROYEK 3
-              </h1>
-              <h1 class="title has-text-centered section-title">
-                Pengembangan Warehouse Management System
-              </h1>
-            </div>
-            <div class="column is-10 has-text-centered is-offset-1">
-              <img
-                class="is-rounded"
-                src="images/ulbi.png"
-                alt=""
-                width="280"
-                height="230"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Begin Services Content -->
-      <div class="section-color services" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div
-              class="column is-12 about-me"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <h1 class="title has-text-centered section-title">
-                Latar Belakang
-              </h1>
-              <div class="column is-10 has-text-centered is-offset-1">
-                <img
-                  class="is-rounded"
-                  src="images/Warehouse.png"
-                  alt=""
-                  width="500"
-                  height="450"
-                />
-              </div>
-              <h2 id="lb" class="subtitle text-center"></h2>
-              <br />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Services Content -->
-      <!-- Begin Skills Content -->
-      <div class="section-light skills" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                Deskripsi Aplikasi
-              </h1>
-              <h2 id="da" class="subtitle text-center"></h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Skills Content -->
-      <!-- Begin Work Content -->
-      <div class="section-dark my-work" id="">
-        <div class="container">
-          <div
-            class="columns is-multiline"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <div class="column is-12">
-              <h1 class="title has-text-centered section-title">KESIMPULAN</h1>
-            </div>
-            <h2 id="kes" class="subtitle text-center"></h2>
-          </div>
-        </div>
-      </div>
-      <!-- End Work Content -->
-    </div>
-    <!-- End Main Content -->
 
     <!-- Begin Footer -->
     <div class="footer">
       <p>
         <strong class="white">CREATE</strong> by
         <a href="http://jgthms.com">Agita Nurfadillah</a>. 1214029
-        <a href="http://opensource.org/licenses/mit-license.php"
-          >Al Novianti Ramadhani Sulaksono</a
-        >. 1214032
-        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">ULBI</a>.
+        <a href="http://opensource.org/licenses/mit-license.php">Al Novianti Ramadhani Sulaksono</a>. 1214032
+        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+          >ULBI</a
+        >.
       </p>
     </div>
     <!-- End Footer -->
@@ -251,6 +159,5 @@
       });
     </script>
     <script src="js/showcase.js"></script>
-    <script type="module" src="js/index.js"></script>
   </body>
 </html>
