--- a/about_us.html
+++ b/about_us.html
@@ -54,10 +54,10 @@
           <div id="mobile-nav" class="navbar-menu">
             <div class="navbar-end">
               <div class="navbar-item">
-                <a class="navbar-item" href="index.html"> Home </a>
+                <a class="navbar-item" href="index.html">Home</a>
               </div>
               <div class="navbar-item">
-                <a class="navbar-item" href="about_us.html"> About Us</a>
+                <a class="navbar-item" href="about_us.html">About Us</a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="proposal.html">Proposal</a>
@@ -86,10 +86,10 @@
                 class="column is-12 hero-menu-desktop has-text-centered is-fixed-top"
               >
                 <ul>
-                  <li class="is-active">
+                  <li>
                     <a href="index.html">Home</a>
                   </li>
-                  <li>
+                  <li class="is-active">
                     <a href="about_us.html">About Us</a>
                   </li>
                   <li>
@@ -134,92 +134,6 @@
           </div>
         </div>
       </div>
-      <!-- End About Me Content -->
-      <div class="section-dark resume">
-        <div class="container">
-          <div
-            class="columns is-multiline"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                PROPOSAL PROYEK 3
-              </h1>
-              <h1 class="title has-text-centered section-title">
-                Pengembangan Warehouse Management System
-              </h1>
-            </div>
-            <div class="column is-10 has-text-centered is-offset-1">
-              <img
-                class="is-rounded"
-                src="images/ulbi.png"
-                alt=""
-                width="280"
-                height="230"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Begin Services Content -->
-      <div class="section-color services" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div
-              class="column is-12 about-me"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <h1 class="title has-text-centered section-title">
-                Latar Belakang
-              </h1>
-              <div class="column is-10 has-text-centered is-offset-1">
-                <img
-                  class="is-rounded"
-                  src="images/Warehouse.png"
-                  alt=""
-                  width="500"
-                  height="450"
-                />
-              </div>
-              <h2 id="lb" class="subtitle text-center"></h2>
-              <br />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Services Content -->
-      <!-- Begin Skills Content -->
-      <div class="section-light skills" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                Deskripsi Aplikasi
-              </h1>
-              <h2 id="da" class="subtitle text-center"></h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Skills Content -->
-      <!-- Begin Work Content -->
-      <div class="section-dark my-work" id="">
-        <div class="container">
-          <div
-            class="columns is-multiline"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <div class="column is-12">
-              <h1 class="title has-text-centered section-title">KESIMPULAN</h1>
-            </div>
-            <h2 id="kes" class="subtitle text-center"></h2>
-          </div>
-        </div>
-      </div>
-      <!-- End Work Content -->
     </div>
     <!-- End Main Content -->
 
@@ -251,6 +165,6 @@
       });
     </script>
     <script src="js/showcase.js"></script>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/us.js"></script>
   </body>
 </html>
