--- a/proposal.html
+++ b/proposal.html
@@ -86,13 +86,13 @@
                 class="column is-12 hero-menu-desktop has-text-centered is-fixed-top"
               >
                 <ul>
-                  <li class="is-active">
+                  <li>
                     <a href="index.html">Home</a>
                   </li>
                   <li>
                     <a href="about_us.html">About Us</a>
                   </li>
-                  <li>
+                  <li class="is-active">
                     <a href="proposal.html">Proposal</a>
                   </li>
                   <li>
@@ -109,118 +109,93 @@
     </div>
     <!-- End Header -->
 
-    <!-- Begin Main Content -->
-    <div class="main-content">
-      <!-- Begin About Me Section -->
-      <div class="section-light about-me" id="about-me">
-        <div class="container">
+    <!-- End About Me Content -->
+    <div class="section-dark resume">
+      <div class="container">
+        <div
+          class="columns is-multiline"
+          data-aos="fade-in"
+          data-aos-easing="linear"
+        >
           <div class="column is-12 about-me">
-            <h1 class="title has-text-centered section-title">About Us</h1>
+            <h1 class="title has-text-centered section-title">
+              PROPOSAL PROYEK 3
+            </h1>
+            <h1 class="title has-text-centered section-title">
+              Pengembangan Warehouse Management System
+            </h1>
           </div>
-          <div class="columns is-multiline">
-            <div
-              class="column is-6 has-vertically-aligned-content"
-              data-aos="fade-right"
-            >
-              <div id="agita"></div>
-              <!-- agita end -->
-              <div id="novi"></div>
-            </div>
-            <div
-              id="image"
-              class="column is-6 right-image"
-              data-aos="fade-left"
-            ></div>
+          <div class="column is-10 has-text-centered is-offset-1">
+            <img
+              class="is-rounded"
+              src="images/ulbi.png"
+              alt=""
+              width="280"
+              height="230"
+            />
           </div>
         </div>
       </div>
-      <!-- End About Me Content -->
-      <div class="section-dark resume">
-        <div class="container">
+    </div>
+    <!-- Begin Services Content -->
+    <div class="section-color services" id="services">
+      <div class="container">
+        <div class="columns is-multiline">
           <div
-            class="columns is-multiline"
+            class="column is-12 about-me"
             data-aos="fade-in"
             data-aos-easing="linear"
           >
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                PROPOSAL PROYEK 3
-              </h1>
-              <h1 class="title has-text-centered section-title">
-                Pengembangan Warehouse Management System
-              </h1>
-            </div>
+            <h1 class="title has-text-centered section-title">
+              Latar Belakang
+            </h1>
             <div class="column is-10 has-text-centered is-offset-1">
               <img
                 class="is-rounded"
-                src="images/ulbi.png"
+                src="images/Warehouse.png"
                 alt=""
-                width="280"
-                height="230"
+                width="500"
+                height="450"
               />
             </div>
+            <h2 id="lb" class="subtitle text-center"></h2>
+            <br />
           </div>
         </div>
       </div>
-      <!-- Begin Services Content -->
-      <div class="section-color services" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div
-              class="column is-12 about-me"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <h1 class="title has-text-centered section-title">
-                Latar Belakang
-              </h1>
-              <div class="column is-10 has-text-centered is-offset-1">
-                <img
-                  class="is-rounded"
-                  src="images/Warehouse.png"
-                  alt=""
-                  width="500"
-                  height="450"
-                />
-              </div>
-              <h2 id="lb" class="subtitle text-center"></h2>
-              <br />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Services Content -->
-      <!-- Begin Skills Content -->
-      <div class="section-light skills" id="">
-        <div class="container">
-          <div class="columns is-multiline">
-            <div class="column is-12 about-me">
-              <h1 class="title has-text-centered section-title">
-                Deskripsi Aplikasi
-              </h1>
-              <h2 id="da" class="subtitle text-center"></h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Skills Content -->
-      <!-- Begin Work Content -->
-      <div class="section-dark my-work" id="">
-        <div class="container">
-          <div
-            class="columns is-multiline"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <div class="column is-12">
-              <h1 class="title has-text-centered section-title">KESIMPULAN</h1>
-            </div>
-            <h2 id="kes" class="subtitle text-center"></h2>
-          </div>
-        </div>
-      </div>
-      <!-- End Work Content -->
     </div>
+    <!-- End Services Content -->
+    <!-- Begin Skills Content -->
+    <div class="section-light skills" id="skills">
+      <div class="container">
+        <div class="columns is-multiline">
+          <div class="column is-12 about-me">
+            <h1 class="title has-text-centered section-title">
+              Deskripsi Aplikasi
+            </h1>
+            <h2 id="da" class="subtitle text-center"></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Skills Content -->
+    <!-- Begin Work Content -->
+    <div class="section-dark my-work" id="my-work">
+      <div class="container">
+        <div
+          class="columns is-multiline"
+          data-aos="fade-in"
+          data-aos-easing="linear"
+        >
+          <div class="column is-12">
+            <h1 class="title has-text-centered section-title">KESIMPULAN</h1>
+          </div>
+          <h2 id="kes" class="subtitle text-center"></h2>
+        </div>
+      </div>
+    </div>
+    <!-- End Work Content -->
+
     <!-- End Main Content -->
 
     <!-- Begin Footer -->
@@ -251,6 +226,6 @@
       });
     </script>
     <script src="js/showcase.js"></script>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/proposal.js"></script>
   </body>
 </html>
