--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
                 PROPOSAL PROYEK 3
               </h1>
               <h1 class="title has-text-centered section-title">
-                Pengembangan Warehouse Management System
+                Membangun Sistem Manajemen Persediaan Pada Warehouse Menggunakan
+                Javascript
               </h1>
               <div class="column is-10 has-text-centered is-offset-1">
                 <img
